--- a/rate-limitting/backend/package.json
+++ b/rate-limitting/backend/package.json
@@ -12,8 +12,10 @@
   "description": "",
   "dependencies": {
     "@types/axios": "^0.14.4",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0"
