--- a/rate-limitting/frontend/package.json
+++ b/rate-limitting/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@marsidev/react-turnstile": "^1.1.0",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
